--- a/res/values-en-rIN/strings.xml
+++ b/res/values-en-rIN/strings.xml
@@ -46,7 +46,7 @@
     <string name="install_failed_msg" product="default" msgid="8554909560982962052">"<xliff:g id="APP_NAME">%1$s</xliff:g> couldn\'t be installed on your phone."</string>
     <string name="launch" msgid="4826921505917605463">"Open"</string>
     <string name="unknown_apps_dlg_title" msgid="2855558586206583032">"Install blocked"</string>
-    <string name="unknown_apps_dlg_text" product="tablet" msgid="7504186369474734767">"For security, your tablet is set to block installation of apps obtained from unknown sources."</string>
+    <string name="unknown_apps_dlg_text" product="tablet" msgid="7504186369474734767">"For security, your device is set to block installation of apps obtained from unknown sources."</string>
     <string name="unknown_apps_dlg_text" product="tv" msgid="7195713985140602351">"For security, your TV is set to block installations of apps obtained from unknown sources."</string>
     <string name="unknown_apps_dlg_text" product="default" msgid="133213135679009316">"For security, your phone is set to block installation of apps obtained from unknown sources."</string>
     <string name="unknown_apps_admin_dlg_text" msgid="1189146324736698462">"Your administrator doesn\'t allow installation of apps obtained from unknown sources."</string>
