--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="launch">Open</string>
     <string name="unknown_apps_dlg_title">Install blocked</string>
     <!-- Message presented in a dialog box when a package is requested to be installed, but the "Allow unknown applications" checkbox is not enabled. [CHAR LIMIT=100] -->
-    <string name="unknown_apps_dlg_text" product="tablet">For security, your tablet is set to block installation of apps obtained from unknown sources.</string>
+    <string name="unknown_apps_dlg_text" product="tablet">For security, your device is set to block installation of apps obtained from unknown sources.</string>
     <!-- Message presented in a dialog box when a package is requested to be installed, but the "Allow unknown applications" checkbox is not enabled. [CHAR LIMIT=100] -->
     <string name="unknown_apps_dlg_text" product="tv">For security, your TV is set to block installation of apps obtained from unknown sources.</string>
     <!-- Message presented in a dialog box when a package is requested to be installed, but the "Allow unknown applications" checkbox is not enabled. [CHAR LIMIT=100] -->
